Using toList() from Stream library